<resources>
    <string name="app_name">DishRecommender</string>
    <string name="recommendationPreference1">Generally healthy (low fat, saturated fat, sugar, and salt)</string>
    <string name="recommendationPreference2">Low calorie count</string>
    <string name="recommendationPreference3">Low carbohydrate content</string>
    <string name="recommendationPreference4">High protein content</string>
    <string name="selectedPreferencesAndPriorities">Dishes near the top are the recommended ones based on the selected preferences and priorities:</string>
    <string name="generalBarChartInformation_text">Nutrients per daily reference intake (RI) of an average adult</string>
    <string name="barChartTitle_text">Pizza margherita - per serving nutrition</string>
    <string name="fragment_crop_image_cropImageAndIdentifyDishButton_text">Crop Image And Identify Dish</string>
    <string name="fragment_generating_recommendations_generatingRecommendationsTextView_text">Generating Recommendations</string>
    <string name="fragment_generating_recommendations_pleaseWaitTextView_text">Please Wait...</string>
    <string name="fragment_initiate_scanning_dish_names_scanDishNamesScreenTitle_text">Find a dish name and add it to the list</string>
    <string name="addDishNameButton_text">Add dish name</string>
    <string name="fragment_initiate_scanning_dish_names_scannedDishNamesTextView_text">Dish names:</string>
    <string name="getRecommendationsButton_text">Get Recommendations</string>
    <string name="fragment_initiate_scanning_dish_names_clearAllDishNamesButton_text">Clear All Dish Names</string>
    <string name="fragment_initiate_scanning_dish_names_updateRecommendationPreferencesButton_text">Update Recommendation Preferences</string>
    <string name="app_title_text">Dish Recommender</string>
    <string name="fragment_our_recommendations_recommendationsScreenTitle_text">Our Recommendations</string>
    <string name="fragment_our_recommendations_servingSizeExplanation_text">Each item\'s nutritional details are for exactly one serving, which represents the amount of food on the plate. This is generally between 160g and 400g.</string>
    <string name="fragment_our_recommendations_recommendationsScreenBottomText">How about another go?</string>
    <string name="fragment_our_recommendations_startNewRecommendationProcessButton_text">Start New Recommendation Process</string>
    <string name="fragment_preferences_screenTitle_text">Select Personal Recommendation Preferences</string>
    <string name="fragment_preferences_prioritiesTextView_text">Priorities</string>
    <string name="fragment_preferences_bottomInstruction_text">Now Hold Your Device Over a Menu</string>
    <string name="fragment_preferences_startRecognisingDishesButton_text">Save Preferences</string>
    <string name="getStartedButton_text">Get Started</string>
    <string name="fragment_welcome_welcomeTextView_text">Dish Recommender</string>
    <string name="fragment_welcome_iAmNewButton_text">I am New</string>
    <string name="fragment_welcome_alreadyUsedTextView_text">Already used Dish Recommender?</string>
    <string name="row_dishNameTextView_text">Veggie shepherd\'s pie with sweet potato mash</string>
    <string name="row_rankingTitleTextView_text">Ranking:</string>
    <string name="row_rankingTextView_text">1</string>
    <string name="row_healthinessScoreTitleTextView_text">Healthiness score:</string>
    <string name="row_healthinessScoreTextView_text">XYZ</string>
    <string name="row_caloriesTitleTextView_text">Calories:</string>
    <string name="row_caloriesTextView_text">540</string>
    <string name="row_totalFatTitleTextView_text">Total fat:</string>
    <string name="row_totalFatTextView_text">16g</string>
    <string name="row_saturatedFatTitleTextView_text">Saturated fat:</string>
    <string name="row_saturatedFatTextView_text">8g</string>
    <string name="row_carbsTitleTextView_text">Carbohydrates:</string>
    <string name="row_carbsTextView_text">66g</string>
    <string name="row_sugarsTitleTextView_text">Sugars:</string>
    <string name="row_sugarsTextView_text">33g</string>
    <string name="row_saltTitleTextView_text">Salt:</string>
    <string name="row_saltTextView_text">2.39g</string>
    <string name="row_fibreTitleTextView_text">Fibre:</string>
    <string name="row_fibreTextView_text">16g</string>
    <string name="row_proteinTitleTextView_text">Protein:</string>
    <string name="row_proteinTextView_text">16g</string>
    <string name="scanned_dish_name_row_scannedDishNameTextView_text">Veggie shepherd\'s pie with sweet potato mash</string>
    <string name="homeMenuName">Home</string>
    <string name="preferencesMenuName">Preferences</string>
    <string name="diaryMenuName">Diary</string>
    <string name="favouritesMenuName">Favourites</string>
    <string name="fragment_crop_image_cropScreenTitle_text">Crop the image so that it contains only one dish name</string>
    <string name="fragment_daily_nutrition_pie_chart_dailyNutritionScreenTitle_text">Daily Nutrition</string>
    <string name="fragment_daily_nutrition_pie_chart_dailyNutritionDate_text">Wednesday, 17 December 2020</string>
    <string name="fragment_daily_nutrition_pie_chart_caloriesPieChartButton_text">Calories</string>
    <string name="fragment_daily_nutrition_pie_chart_totalFatPieChartButton_text">Fat</string>
    <string name="fragment_daily_nutrition_pie_chart_saturatedFatPieChartButton_text">Sat. fat</string>
    <string name="fragment_daily_nutrition_pie_chart_carbsPieChartButton_text">Carbs</string>
    <string name="fragment_daily_nutrition_pie_chart_sugarsPieChartButton_text">Sugars</string>
    <string name="fragment_daily_nutrition_pie_chart_saltPieChartButton_text">Salt</string>
    <string name="fragment_daily_nutrition_pie_chart_fibrePieChartButton_text">Fibre</string>
    <string name="fragment_daily_nutrition_pie_chart_proteinPieChartButton_text">Protein</string>
    <string name="fragment_daily_nutrition_pie_chart_dailyTotalIntake_text">Total daily calories intake: 0% RI (0)</string>
    <string name="fragment_diary_diaryScreenTitle_text">Your Diary of Consumed Dishes</string>
    <string name="fragment_diary_selectedDateButton_text">Wednesday, 17 December 2020</string>
    <string name="fragment_diary_weeklyNutritionButton_text">Weekly nutrition</string>
    <string name="fragment_diary_dailyNutritionButton_text">Daily nutrition</string>
    <string name="fragment_diary_breakfastLabel_text">Breakfast</string>
    <string name="fragment_diary_lunchLabel_text">Lunch</string>
    <string name="fragment_diary_dinnerLabel_text">Dinner</string>
    <string name="fragment_diary_favouritesScreenTitle_text">Your Favourite Dishes</string>
    <string name="fragment_home_sloganTextView_text">Helping you stay healthy\nwhenever you eat out!</string>
    <string name="fragment_weekly_nutrition_line_chart_weeklyNutritionScreenTitle_text">Weekly Nutrition</string>
    <string name="fragment_weekly_nutrition_line_chart_weeklyNutritionDateRange_text">13-19 December 2020</string>
    <string name="fragment_weekly_nutrition_line_chart_caloriesLineChartButton_text">Calories</string>
    <string name="fragment_weekly_nutrition_line_chart_totalFatLineChartButton_text">Fat</string>
    <string name="fragment_weekly_nutrition_line_chart_saturatedFatLineChartButton_text">Sat. fat</string>
    <string name="fragment_weekly_nutrition_line_chart_carbsLineChartButton_text">Carbs</string>
    <string name="fragment_weekly_nutrition_line_chart_sugarsLineChartButton_text">Sugars</string>
    <string name="fragment_weekly_nutrition_line_chart_saltLineChartButton_text">Salt</string>
    <string name="fragment_weekly_nutrition_line_chart_fibreLineChartButton_text">Fibre</string>
    <string name="fragment_weekly_nutrition_line_chart_proteinLineChartButton_text">Protein</string>
    <string name="fragment_weekly_nutrition_line_chart_averageDailyIntake_text">Average daily fat intake: 50% RI (35g)</string>
</resources>