<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyNutritionPieChartFragment">

    <TextView
        android:id="@+id/dailyNutritionScreenTitle"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:text="@string/fragment_daily_nutrition_pie_chart_dailyNutritionScreenTitle_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dailyNutritionDate"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/fragment_daily_nutrition_pie_chart_dailyNutritionDate_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyNutritionScreenTitle" />

    <LinearLayout
        android:id="@+id/topRowButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/dailyNutritionDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    <Button
        android:id="@+id/caloriesPieChartButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_daily_nutrition_pie_chart_caloriesPieChartButton_text"
        android:textSize="11sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/totalFatPieChartButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_daily_nutrition_pie_chart_totalFatPieChartButton_text"
        android:textSize="11sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/saturatedFatPieChartButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_daily_nutrition_pie_chart_saturatedFatPieChartButton_text"
        android:textSize="11sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/carbsPieChartButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_daily_nutrition_pie_chart_carbsPieChartButton_text"
        android:textSize="11sp"
        android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomRowButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintTop_toBottomOf="@id/topRowButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    <Button
        android:id="@+id/sugarsPieChartButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_daily_nutrition_pie_chart_sugarsPieChartButton_text"
        android:textSize="11sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/saltPieChartButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_daily_nutrition_pie_chart_saltPieChartButton_text"
        android:textSize="11sp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/fibrePieChartButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_daily_nutrition_pie_chart_fibrePieChartButton_text"
        android:textSize="11sp"
        android:layout_weight="1"/>
    
    <Button
        android:id="@+id/proteinPieChartButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_daily_nutrition_pie_chart_proteinPieChartButton_text"
        android:textSize="11sp"
        android:layout_weight="1"/>

    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/dailyTotalIntake"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomRowButtons" />

    <TextView
        android:id="@+id/dailyTotalIntake"
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/fragment_daily_nutrition_pie_chart_dailyTotalIntake_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>