<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scanDishNamesScreenTitle"
            style="@style/Base.Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/fragment_initiate_scanning_dish_names_scanDishNamesScreenTitle_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@+id/addDishNameButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.812" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addDishNameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/addDishNameButton_text"
            android:tooltipText="Add a dish name by scanning it"
            app:icon="@drawable/ic_add"
            app:layout_constraintBottom_toTopOf="@+id/scannedDishNamesTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/scannedDishNamesTextView"
            style="@style/Base.Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:text="@string/fragment_initiate_scanning_dish_names_scannedDishNamesTextView_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@+id/scannedDishNamesRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scannedDishNamesRecyclerView"
            android:layout_width="250dp"
            android:layout_height="110dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toTopOf="@+id/getRecommendationsButtonInInitiateScanningDishNamesFragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/getRecommendationsButtonInInitiateScanningDishNamesFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/getRecommendationsButton_text"
            android:tooltipText="Get recommendations for all dishes in the list"
            app:layout_constraintBottom_toTopOf="@+id/clearAllDishNamesButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearAllDishNamesButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_initiate_scanning_dish_names_clearAllDishNamesButton_text"
            android:tooltipText="Clears all dish names from the list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>