<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/recommendationsScreenTitle"
            style="@style/Base.Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/fragment_our_recommendations_recommendationsScreenTitle_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/selectedRecommendationPreferences"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/selectedPreferencesAndPriorities"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommendationsScreenTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommendedDishesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectedRecommendationPreferences" />

        <TextView
            android:id="@+id/servingSizeExplanation"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/fragment_our_recommendations_servingSizeExplanation_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommendedDishesRecyclerView" />

        <TextView
            android:id="@+id/recommendationsScreenBottomText"
            style="@style/Base.Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/fragment_our_recommendations_recommendationsScreenBottomText"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servingSizeExplanation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startNewRecommendationProcessButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/fragment_our_recommendations_startNewRecommendationProcessButton_text"
            android:tooltipText="Select new recommendation preferences and add dish names to receive recommendations"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommendationsScreenBottomText"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>